# shotAI

./: .eslintrc.json  .gitignore  .npmrc  README.md  forge.config.ts  index.html  overlay.html  package-lock.json  package.json  toolbar.html  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts  vitest.config.ts
docs/: HARDENING-PLAN.md  PHASE-3-PLAN.md  PLAN.md
native/element-locator/: Cargo.toml
native/element-locator/src/: lib.rs
scripts/: build-element-locator.mjs  make-loading-gif.cjs  postinstall-electron.mjs  postinstall.mjs
src/main/: CaptureController.ts  ClaudeService.ts  ElementLocator.ts  ProjectStore.ts  RegionService.ts  archive.test.ts  archive.ts  arp-icon.test.ts  arp-icon.ts  atomic-write.ts  capture-geometry.test.ts  capture-geometry.ts  capture-selftest.ts  claude-models.ts  claude-service.ts  click-caption.test.ts  click-caption.ts  element-locator.ts  export-docx.ts  export-geometry.test.ts  export-geometry.ts  export-package.ts  export-pptx.ts  export.ts  gpu-policy.test.ts  gpu-policy.ts  ipc.ts  logger.ts  main.ts  menu.ts  mutate-serialize.test.ts  ocr.ts  path-confine.test.ts  path-confine.ts  paths.ts  project-store.ts  render-gate.test.ts  render-gate.ts  secrets.ts  section-callout.test.ts  (+5 more)
src/preload/: preload.ts
src/renderer/: Notice.tsx  notice.css  shotai-api.d.ts  useConfirm.tsx
src/renderer/editor/: BlurRegion.tsx  Editor.tsx  annotations.ts  editor-geometry.test.ts  editor-geometry.ts  editor.css  flatten.ts
src/shared/: ipc.ts  project.test.ts  project.ts  redact-detect.test.ts  redact-detect.ts  sop.ts
(+24 files in other folders)
