[package]
name = "element-locator"
version = "0.1.0"
edition = "2021"
description = "shotAI: UI Automation element-at-point (Windows). C-ABI cdylib, loaded from the main process via koffi FFI."
publish = false

[lib]
name = "element_locator"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
]

[profile.release]
opt-level = 2
lto = true
strip = true
